[package]
name = "rust-gui-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.8.3", features = ["im"] }
im = "15.1.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
directories = "4.0.1"
